fix z-index of hidden elements

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -127,9 +127,10 @@
     left: 0;
     transition: opacity @stage-change-time ease;
     opacity: 0;
+    z-index: 1;
     &.visible {
       opacity: 1;
-
+      z-index: 10;
     }
     .title {
       text-align: center;
